class y css en footer

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 				<h5>Suscribete vía Email</h5>
 				<p>Copyright 2018 VALENZUELA & DELARZE. Todos los Derechos Reservados. Los precios de venta y equipamientos publicitados en este sitio web son referenciales y están sujetos a confirmación. Cuando por error de publicación estos no sean los del Mercado, el Cliente deberá ratificarlos en la Empresa. Valenzuela & Delarze se reserva el derecho a modificar, valores, cuotas y especificaciones ténicas sin previo aviso. Ver Políticas de Privacidad</p>
 				<form action="AQUI VA EL ARCHIVO PHP PARA ENVIAR">
-					<input type="email" name="emailaddress">
+					<input type="email" name="emailaddress" class="email-sub">
 					<input type="submit">
 				</form>
 			</div>
