--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<!-- MENU -->
 	<nav class="navbar navbar-expand-lg navbar-light menu-principal">
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="index.html">
 			<img class="logo" src="assets/images/logos/valenzuela_02.png" alt="Valenzuela & Delarze" class="img-fluid">
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
