--- a/nuevos.html
+++ b/nuevos.html
@@ -71,8 +71,58 @@
 	</div> -->
 	<!-- FIN MENU -->
 
-
-	
+	<footer>
+		<div class="row">
+			<div class="col">
+				<h5>Suscribete vía Email</h5>
+				<p>Copyright 2018 VALENZUELA & DELARZE. Todos los Derechos Reservados. Los precios de venta y equipamientos publicitados en este sitio web son referenciales y están sujetos a confirmación. Cuando por error de publicación estos no sean los del Mercado, el Cliente deberá ratificarlos en la Empresa. Valenzuela & Delarze se reserva el derecho a modificar, valores, cuotas y especificaciones ténicas sin previo aviso. Ver Políticas de Privacidad</p>
+				<form action="AQUI VA EL ARCHIVO PHP PARA ENVIAR">
+					<input type="email" name="emailaddress" class="email-sub" value=" Email">
+					<input type="submit" value="Suscribir" class="email-enviar">
+				</form>
+			</div>
+			<div class="col">
+				<div class="row footer-links">
+					<div class="col">
+						<h6>
+							<a href="#">Número de teléfono</a> 
+						</h6>
+						<h6>
+							<a href="#">Email</a> 
+						</h6>
+						<h6>
+							<a href="#">Sucursales</a> 
+						</h6>
+						<button type="button" class="btn-postventa">
+							<a href="#">Post Venta</a> 
+						</button>
+					</div>
+					<div class="col">
+						<h6>
+							<a href="#">Contáctanos</a> 
+						</h6>
+						<h6>
+							<a href="#">Nuevos</a>
+						</h6>
+						<h6>
+							<a href="#">Usados</a>
+						</h6>
+					</div>
+					<div class="col">
+						<h6>
+							<a href="#">Noticias</a>
+						</h6>
+						<h6>
+							<a href="#">Términos y Condiciones</a>
+						</h6>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<div class="container-fluid copyright">
+		<p>Copyright <a href="">Muelle Digital</a></p> 
+	</div>
 	
 	<script src="assets/js/lib/jquery-3.3.1.js"></script>
 	<script src="assets/js/lib/popper.min.js"></script>
