--- a/nuevos.html
+++ b/nuevos.html
@@ -71,6 +71,22 @@
 	</div> -->
 	<!-- FIN MENU -->
 
+	<!-- FRONT SLIDER -->	
+	<div class="container-fluid front-slider">
+		<div class="row">
+			<div class="col-md-8 p-0">
+				<img src="assets/images/vd.jpg" class="img-fluid">
+			</div>
+
+			<div class="col-md-4">
+				<!-- sistema -->
+			</div>
+		</div>
+	</div>
+	<!-- FIN FRONT SLIDER -->
+
+	
+
 	<footer>
 		<div class="row">
 			<div class="col">
