--- a/nuevos.html
+++ b/nuevos.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-		<!-- MENU -->
+	
+<!-- MENU -->
 	<nav class="navbar navbar-expand-lg navbar-light menu-principal">
 		<a class="navbar-brand" href="index.html">
 			<img class="logo" src="assets/images/logos/valenzuela_02.png" alt="Valenzuela & Delarze" class="img-fluid">
@@ -69,9 +70,9 @@
 			<a href=""><li>Contacto</li></a> 
 		</ul>
 	</div> -->
-	<!-- FIN MENU -->
+<!-- FIN MENU -->
 
-	<!-- FRONT SLIDER -->	
+<!-- FRONT SLIDER -->	
 	<div class="container-fluid front-slider">
 		<div class="row">
 			<div class="col-md-8 p-0">
@@ -83,9 +84,471 @@
 			</div>
 		</div>
 	</div>
-	<!-- FIN FRONT SLIDER -->
+<!-- FIN FRONT SLIDER -->
 
-	
+<!-- FORD -->
+	<div class="container-fluid destacados">
+		<div class="container">
+			<h2 class="style_titulos_secciones" >
+				Destacados
+			</h2>
+		</div>
+		<!-- slider destacados  -->
+		<div id="destacados-slider" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<!-- indicadores  -->
+				<ol class="carousel-indicators">
+   					<li data-target="#destacados-slider" data-slide-to="0" class="active"></li>
+    				<li data-target="#destacados-slider" data-slide-to="1"></li>
+    				<li data-target="#destacados-slider" data-slide-to=""></li>
+  				</ol>
+  				<!-- fin indicadores -->
+				<div class="carousel-item destacados-single active">
+					<div class="row">
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="carousel-item destacados-single">
+					<div class="row">
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>
+		<!-- fin slider destacados --> 
+	</div>
+<!-- FIN FORD -->
+
+<!-- KIA  -->
+	<div class="container-fluid destacados">
+		<div class="container">
+			<h2 class="style_titulos_secciones" >
+				Destacados
+			</h2>
+		</div>
+		<!-- slider destacados  -->
+		<div id="destacados-slider" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<!-- indicadores  -->
+				<ol class="carousel-indicators">
+   					<li data-target="#destacados-slider" data-slide-to="0" class="active"></li>
+    				<li data-target="#destacados-slider" data-slide-to="1"></li>
+    				<li data-target="#destacados-slider" data-slide-to=""></li>
+  				</ol>
+  				<!-- fin indicadores -->
+				<div class="carousel-item destacados-single active">
+					<div class="row">
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="carousel-item destacados-single">
+					<div class="row">
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>
+		<!-- fin slider destacados --> 
+	</div>
+<!-- FIN KIA  -->
 
 	<footer>
 		<div class="row">
