--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="#">
 						Nuevos 
 					</a>
