rrss iconos nuevo e index

--- a/index.html
+++ b/index.html
@@ -426,6 +426,10 @@
 						<h6>
 							<a href="#">Términos y Condiciones</a>
 						</h6>
+						<div class="rrss">
+							<i class="fab fa-facebook-f"></i>
+							<i class="fab fa-youtube"></i>
+						</div>	
 					</div>
 				</div>
 			</div>
