--- a/nuevos.html
+++ b/nuevos.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
-	
+
 <!-- MENU -->
 	<nav class="navbar navbar-expand-lg navbar-light menu-principal">
 		<a class="navbar-brand" href="index.html">
@@ -22,7 +22,7 @@
 
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
-				<li class="nav-item active">
+				<li class="nav-item">
 					<a class="nav-link" href="#">
 						Nuevos 
 					</a>
@@ -90,7 +90,7 @@
 	<div class="container-fluid destacados">
 		<div class="container">
 			<h2 class="style_titulos_secciones" >
-				Destacados
+				Ford
 			</h2>
 		</div>
 		<!-- slider destacados  -->
@@ -322,7 +322,7 @@
 	<div class="container-fluid destacados">
 		<div class="container">
 			<h2 class="style_titulos_secciones" >
-				Destacados
+				Kia
 			</h2>
 		</div>
 		<!-- slider destacados  -->
@@ -550,6 +550,238 @@
 	</div>
 <!-- FIN KIA  -->
 
+<!-- JEEP  -->
+	<div class="container-fluid destacados">
+		<div class="container">
+			<h2 class="style_titulos_secciones" >
+				Jeep
+			</h2>
+		</div>
+		<!-- slider destacados  -->
+		<div id="destacados-slider" class="carousel slide" data-ride="carousel">
+			<div class="carousel-inner">
+				<!-- indicadores  -->
+				<ol class="carousel-indicators">
+   					<li data-target="#destacados-slider" data-slide-to="0" class="active"></li>
+    				<li data-target="#destacados-slider" data-slide-to="1"></li>
+    				<li data-target="#destacados-slider" data-slide-to=""></li>
+  				</ol>
+  				<!-- fin indicadores -->
+				<div class="carousel-item destacados-single active">
+					<div class="row">
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="carousel-item destacados-single">
+					<div class="row">
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col">
+							<div class="destacado-card">
+								<img class="img-fluid" src="assets/images/autos/DODGE/CHALLENGER/AUTO_PNG/dodge-challenger-srt8-blanco-1534875270.png"> <!-- foto del auto destacado -->
+								<div class="destacado-texto-principal">
+									<h4>
+										Challenger
+									</h4>
+								</div>
+								<div class="destacado-texto-detalle">
+									<p>
+										auto tipo 1
+									</p>
+								</div>
+								<div class="destacado-precio">
+									<p>
+										$$$$$
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>		
+		</div>
+		<!-- fin slider destacados --> 
+	</div>
+<!-- FIN JEEP  -->
+
 	<footer>
 		<div class="row">
 			<div class="col">
@@ -594,6 +826,10 @@
 						<h6>
 							<a href="#">Términos y Condiciones</a>
 						</h6>
+						<div class="rrss">
+							<i class="fab fa-facebook-f"></i>
+							<i class="fab fa-youtube"></i>
+						</div>	
 					</div>
 				</div>
 			</div>
