--- a/nuevos.html
+++ b/nuevos.html
@@ -827,8 +827,12 @@
 							<a href="#">Términos y Condiciones</a>
 						</h6>
 						<div class="rrss">
-							<i class="fab fa-facebook-f"></i>
-							<i class="fab fa-youtube"></i>
+							<a href="https://www.facebook.com/valenzueladelarze">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+							<a href="https://www.youtube.com/channel/UCEDXGQZq6-4l8gtuYU4X9Ig/feed" >
+								<i class="fab fa-youtube"></i>
+							</a>
 						</div>	
 					</div>
 				</div>
