--- a/nuevos.html
+++ b/nuevos.html
@@ -23,7 +23,7 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav menu_dv">
 				<li class="nav-item">
-					<a class="nav-link" href="#">
+					<a class="nav-link" href="nuevos.html">
 						Nuevos 
 					</a>
 				</li>
