--- a/sucursales.html
+++ b/sucursales.html
@@ -71,6 +71,13 @@
 	</div> -->
 <!-- FIN MENU -->
 
+<!-- TITULO SUCURSALES -->
+	<div class="sucursales-titulo">
+		<h2>Sucursales</h2>
+	</div>
+<!-- FIN TITULO SUCURSALES -->
+
+
 	<footer>
 		<div class="row">
 			<div class="col">
