--- a/sucursales.html
+++ b/sucursales.html
@@ -79,10 +79,10 @@
 
 	<div class="container sucursales">
 		<!-- SUCURSALES HONDA -->
-		<section class="sucursales-honda">
+		<section class="sucursales-general">
 			<h1>HONDA</h1>
 			<div class="row">
-				<div class="col sucursal-card">
+				<div class="col-md-3 sucursal-card">
 					<div class="sucursal-card-img"></div>
 					<div class="sucursal-card-title">
 						<h6>
@@ -102,7 +102,7 @@
 					</div>
 				</div>
 
-				<div class="col sucursal-card">
+				<div class="col-md-3 sucursal-card">
 					<div class="sucursal-card-img"></div>
 					<div class="sucursal-card-title">
 						<h6>
@@ -122,7 +122,189 @@
 					</div>
 				</div>
 
-				<div class="col sucursal-card">
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- FIN SUCURSALES HONDA -->
+
+		<!-- SUCURSALES PEUGEOT -->
+		<section class="sucursales-general">
+			<h1>Peugeot</h1>
+			<div class="row">
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- FIN SUCURSALES PEUGEOT -->
+
+		<!-- SUCURSALES JEEP - DODGE - FIAT - FORD -->
+		<section class="sucursales-general">
+			<h1>JEEP - DODGE - FIAT - FORD</h1>
+			<div class="row">
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- FIN SUCURSALES JEEP - DODGE - FIAT - FORD -->
+
+
+		<!-- SUCURSALES USADOS -->
+		<section class="sucursales-general">
+			<h1>USADOS</h1>
+			<div class="row">
+				<div class="col-md-3 sucursal-card">
+					<div class="sucursal-card-img"></div>
+					<div class="sucursal-card-title">
+						<h6>
+							<b>PADRE HURTADO NORTE 1580 Vitacura - Santiago</b>
+						</h6>
+					</div>
+					<div class="sucursal-card-detail">
+						<p>
+							<b>VENTAS</b> <br>
+							Lunes a Viernes de 09:00 a 19:00 hrs.  | Sábado de 10:00 a 14:00 hrs.
+							FONO 228404004
+							<br><br>
+							<b>SERVICIO TÉCNICO</b> <br>
+							Lunes a Viernes de 09:00 a 18:30 hrs
+							FONO 228404050
+						</p>
+					</div>
+				</div>
+
+				<div class="col-md-3 sucursal-card">
 					<div class="sucursal-card-img"></div>
 					<div class="sucursal-card-title">
 						<h6>
@@ -163,7 +345,8 @@
 				</div>
 			</div>
 		</section>
-		<!-- FIN SUCURSALES HONDA -->
+		<!-- FIN SUCURSALES USADOS -->
+
 	</div>
 
 	<footer>
