correcciones codigo general y comienzo noticias

--- a/noticias.html
+++ b/noticias.html
@@ -70,6 +70,15 @@
 		</ul>
 	</div> -->
 <!-- FIN MENU -->
+<!-- TITULO NOTICIAS -->
+	<div class="titulo">
+		<h2>NOTICIAS</h2>
+	</div>
+<!-- FIN TITULO NOTICIAS -->
+
+<!-- NOTICIAS -->
+
+<!-- FIN NOTICIAS -->
 
 	<footer>
 		<div class="row">
