--- a/sucursales.html
+++ b/sucursales.html
@@ -72,7 +72,7 @@
 <!-- FIN MENU -->
 
 <!-- TITULO SUCURSALES -->
-	<div class="sucursales-titulo">
+	<div class="titulo">
 		<h2>Sucursales</h2>
 	</div>
 <!-- FIN TITULO SUCURSALES -->
