inicio de galeria de noticias

--- a/noticias.html
+++ b/noticias.html
@@ -77,7 +77,19 @@
 <!-- FIN TITULO NOTICIAS -->
 
 <!-- NOTICIAS -->
-
+	<section class="container noticias">
+		<div class="row">
+			<div class="col-md-5 noticias-single">	
+			</div>
+			<div class="col-md-5 noticias-single">
+			</div>
+			<div class="col-md-2 noticias-single">
+			</div>
+		</div>
+		<div class="row"></div>
+		<div class="row"></div>
+		<div class="row"></div>
+	</section>
 <!-- FIN NOTICIAS -->
 
 	<footer>
