css titulo noticias

--- a/noticias.html
+++ b/noticias.html
@@ -79,11 +79,23 @@
 <!-- NOTICIAS -->
 	<section class="container noticias">
 		<div class="row">
-			<div class="col-md-5 noticias-single">	
+			<div class="col-md-5 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>	
 			</div>
 			<div class="col-md-4 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>		
 			</div>
 			<div class="col-md-3 noticias-single">
+				<div class="noticias-titulo col-md-10 col-md-10">
+					<h6>Noticia 1</h6>
+					<p>Bajada de la noticia</p>
+				</div>		
 			</div>
 		</div>
 		<div class="row"></div>
