termino noticias y comienzo de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -71,6 +71,24 @@
 	</div> -->
 <!-- FIN MENU -->
 
+<!-- TITULO SUCURSALES -->
+	<div class="titulo">
+		<h2>Contacto</h2>
+	</div>
+<!-- FIN TITULO SUCURSALES -->
+
+	<section class="container contacto">
+		<div class="contacto-general">
+			<h1>Felicitaciones</h1>
+		</div>
+		<div class="contacto-general">
+			<h1>Consulta</h1>
+		</div>
+		<div class="contacto-general">
+			<h1>Reclamos</h1>
+		</div>
+	</section>
+
 	<footer>
 		<div class="row">
 			<div class="col">
