--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
 				<img src="assets/images/vd.jpg" class="img-fluid">
 			</div>
 
-			<div class="col-md-4">
-				<!-- sistema -->
+			<div class="col-md-4 sistema">
+			 <a href="#"><h4>Agendar servicio técnico / </h4></a>
+			 <a href="#"><h4>Cotiza</h4></a>
+
+				<div class="">
+					
+				</div>
 			</div>
 		</div>
 	</div>
