--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 	<div class="container-fluid destacados">
 		<div class="container">
 			<h2 class="style_titulos_secciones" >
-				Destacados
+				Usados
 			</h2>
 		</div>
 		<!-- slider destacados  -->
